<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ShakeActivity">


    <TextView
        android:id="@+id/text_activity_shake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_shake"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_shake_begin"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/shakes_counter_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shakes_counter_msg"
        android:textSize="30sp"
        android:visibility="invisible"
        android:layout_above="@id/start_button"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/accelerometervalues_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shaking_msg"
        android:textSize="50sp"
        android:visibility="invisible"
        android:layout_above="@id/shakes_counter_msg"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/text_remaining_time"
        android:gravity="top|end"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/start_button"/>
    
    <TextView
        android:id="@+id/text_minutes_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_fixed_text"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/countdown_text"/>
</RelativeLayout>
