<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="xyz.fjrm.shakeit.fragments.GameJoinFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/title_fragment_game_join"
        android:textSize="25sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_game_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/edittext_game_player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_game_player_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_game_join_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="16dp"
        android:text="@string/button_game_join_submit" />

</LinearLayout>